# union

./: .env.example  .gitignore  README.md  feeds.yaml  pyproject.toml  requirements.txt
.github/workflows/: rss_to_wp.yml
src/rss_to_wp/: __init__.py  __main__.py  cli.py  config.py
src/rss_to_wp/feeds/: __init__.py  filter.py  parser.py
src/rss_to_wp/images/: __init__.py  downloader.py  pexels.py  rss_extractor.py  unsplash.py
src/rss_to_wp/rewriter/: __init__.py  openai_client.py
src/rss_to_wp/storage/: __init__.py  dedupe.py
src/rss_to_wp/utils/: __init__.py  email.py  http.py  logging.py
src/rss_to_wp/wordpress/: __init__.py  client.py  media.py
